Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="inpoint" class="anchor" href="#inpoint" aria-hidden="true"><span class="octicon octicon-link"></span></a>InPoint</h1>
+<a id="upnp-scanner" class="anchor" href="#upnp-scanner" aria-hidden="true"><span class="octicon octicon-link"></span></a>Upnp Scanner</h1>
 
 <p>UPnP Scanner can discover any UPnP devices present in the local network.
 Features </p>
