--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@ Features </p>
 </li>
 </ul>
 
-<p><a href="https://play.google.com/store/apps/details?id=com.geminiapps.upnpbrowser&amp;hl=en">https://play.google.com/store/apps/details?id=com.geminiapps.upnpbrowser&amp;hl=en</a></p>
+<p><a href="https://play.google.com/store/apps/details?id=com.geminiapps.upnpbrowser">
+  <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png">
+</a></p>
       </section>
     </div>
 
